--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -364,15 +364,40 @@ pre code {
 
 <div id="currently-taught-classes" class="section level2">
 <h2>Currently taught classes</h2>
+<div id="icpe-pre-conference-course-on-missing-data-copenhagen-denmark" class="section level3">
+<h3>ICPE pre-conference course on missing data (Copenhagen,
+Denmark)</h3>
+<ul>
+<li>Upcoming: ICPE 2022, Copenhagen, Denmark</li>
+<li>Thursday, August 25, 2022</li>
+</ul>
+<p>This course will introduce participants to the methods available to
+mitigate concerns around missing data in Real World Evidence studies.
+These include the identification and incorporation of data from external
+validation groups, the use of subset internal calibration groups, and
+the use of multiple imputation methods when data are believed to be
+missing at random. Real-world examples will be used across the lecture
+sessions to illustrate and connect different concepts.</p>
+<blockquote>
+<p><strong>Landscape Analysis on Techniques to Deal with Missing Data in
+Longitudinal Healthcare Databases</strong> <strong>Session</strong>:
+Advanced Pharmacoepidemiology Methods: Mitigating Missing Data Concerns
+with External or Internal Subset Validation Populations <br></p>
+</blockquote>
+</div>
+<div id="introduction-to-pharmacoepidemiology-heidelberg-germany" class="section level3">
+<h3>Introduction to Pharmacoepidemiology (Heidelberg, Germany)</h3>
 <p>Since 2019, I have had the opportunity to teach the following lecture
 every other year at the Medical Faculty of Heidelberg, Rupert Carola
 University Heidelberg (Germany):</p>
 <blockquote>
-<p>Introduction to Pharnacoepidemiology, Epidemiology Module, Medical
-Biometry/Biostatistics MSc course Institute for Medical Biometry and
-Informatics (IMBI), Medical Faculty of Heidelberg, Rupert Carola
-University Heidelberg (Germany), 6-hr one day session, 2 yr cycle</p>
+<p><strong>Introduction to Pharnacoepidemiology</strong>, Epidemiology
+Module, Medical Biometry/Biostatistics MSc course Institute for Medical
+Biometry and Informatics (IMBI), Medical Faculty of Heidelberg, Rupert
+Carola University Heidelberg (Germany), 6-hr one day session, 2 yr
+cycle</p>
 </blockquote>
+</div>
 </div>
 <div id="teaching-philosophy" class="section level2">
 <h2>Teaching philosophy</h2>
