added profile pic again

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -354,52 +354,66 @@ contributions</h1>
 </div>
 
 
-<div id="talks" class="section level2">
-<h2>Talks</h2>
-<p><strong>Weberpals J</strong>, Sondhi A, Jiang C, Yerram P, Taylor MD,
-Samant M, Cherng ST. A Systematic Approach Towards Missing Lab Data in
-Electronic Health Records: A Case Study in Non-Small Cell Lung Cancer
-and Multiple Myeloma. 37th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management 2021.
-Pharmacoepidemiol Drug Saf 2021; 30:36-36. [Oral presentation]</p>
-<p><strong>Weberpals J</strong>, Becker T, Schmich F, Rüttinger D,
-Bauer-Mehren A<em>, Theis FJ</em>. Deep learning-based propensity scores
-for confounding control in comparative effectiveness research: a
-large-scale real-world data study. 36th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management, Berlin, Germany,
-2020. Pharmacoepidemiol Drug Saf 2020; 29(S3):382-383 [Oral
+<div id="conference-talks" class="section level2">
+<h2>Conference talks</h2>
+<p><strong>Landscape Analysis on Techniques to Deal with Missing Data in
+Longitudinal Healthcare Databases.</strong> The presentation was part of
+the pre-conference educational course <em>Advanced Pharmacoepidemiology
+Methods: Mitigating Missing Data Concerns with External or Internal
+Subset Validation Populations.</em> 38th International Conference on
+Pharmacoepidemiology and Therapeutic Risk Management, Copenhagen,
+Denmark, 25th August 2022. [Educational conference talk]</p>
+<p><strong>Deep Learning on Electronic Health Records for Research in
+Pharmacoepidemiology: Examples from The Field of Oncology.</strong>
+Invited speaker at FDA Sentinel Innovation and Methods Seminar series on
+September 7, 2022 (virtual).</p>
+<p><strong>A Systematic Approach Towards Missing Lab Data in Electronic
+Health Records: A Case Study in Non-Small Cell Lung Cancer and Multiple
+Myeloma.</strong> 37th International Conference on Pharmacoepidemiology
+&amp; Therapeutic Risk Management 2021. Pharmacoepidemiol Drug Saf 2021;
+30:36-36. [Oral presentation]</p>
+<p><strong>Deep learning-based propensity scores for confounding control
+in comparative effectiveness research: a large-scale real-world data
+study.</strong> 36th International Conference on Pharmacoepidemiology
+&amp; Therapeutic Risk Management, Berlin, Germany, 2020.
+Pharmacoepidemiol Drug Saf 2020; 29(S3):382-383 [Oral presentation]</p>
+<p><strong>Real-world Data Science in Pharmaceutical Research &amp;
+Early Drug Development.</strong> Research &amp; Development Career Day
+and Mentoring Event, German Cancer Research Center (DKFZ), Heidelberg,
+Germany, 6th December 2019.</p>
+<p><strong>Cancer Pharmacoepidemiology: Researching the Diffusion of
+Innovation.</strong> University of Florida, Gainesville, FL, USA,
+November 14th 2019. [Faculty candidate seminar presentation]</p>
+<p><strong>Deep learning-based propensity score computation - A
+methodological approach to constructing synthetic control arms.</strong>
+RPF/RiSE Symposium 2019. Basel, 2nd September 2019. [Oral
 presentation]</p>
-<p>Loureiro H, Becker T, Bauer-Mehren A, Ahmidi N, <strong>Weberpals
-J</strong>. Improving predictive ability of survival models: comparison
-of multiple state of the art models. 36th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management, Berlin, Germany,
-2020. Pharmacoepidemiol Drug Saf 2020; 29(S3):35-35 [Oral
+<p><strong>Deep Learning in Pharmacoepidemiology &amp; Drug
+Development.</strong> Mittwochsfortbildung [Clinical advanced training
+lecture], Department for Clinical Pharmacology and Pharmacoepidemiology,
+University hospital Heidelberg, Heidelberg, Germany, 9th August 2019.
+[Invited oral presentation]</p>
+<p><strong>Deep Learning on Real-World Data: Overview and Application in
+Early Drug Development.</strong> Symposium Clinical Pharmacology &amp;
+Clinical Pharmacy. Reims, France, 29th June 2019. [Oral
 presentation]</p>
-<p>Cancer Pharmacoepidemiology: Researching the Diffusion of Innovation.
-University of Florida, Gainesville, FL, USA, November 14th 2019.
-[Faculty candidate seminar presentation]</p>
-<p>Deep learning-based propensity score computation - A methodological
-approach to constructing synthetic control arms. RPF/RiSE Symposium
-2019. Basel, 2nd September 2019. [Oral presentation]</p>
-<p>Deep Learning in Pharmacoepidemiology &amp; Drug Development.
-Mittwochsfortbildung [Clinical advanced training lecture], Department
-for Clinical Pharmacology and Pharmacoepidemiology, University hospital
-Heidelberg, Heidelberg, Germany, 9th August 2019. [Invited oral
-presentation]</p>
-<p>Deep Learning on Real-World Data: Overview and Application in Early
-Drug Development. Symposium Clinical Pharmacology &amp; Clinical
-Pharmacy. Reims, France, 29th June 2019. [Oral presentation]</p>
-<p>High-dimensional real-world data: chances, challenges and exemplary
-use cases. Global Data Science Conference (Roche internal). Baden-Baden,
-26th June 2019. [Oral presentation] Deep Learning-based Propensity Score
-Computation: Exemplary Cohort Study in Second Line Metastatic Cancer
-Patients Treated with Cancer Immunotherapy Versus Non-Cancer
-Immunotherapy. 10th Workshop of the working group Pharmacoepidemiology
-of the German Society for Epidemiology (DGEpi). Berlin, 24th May 2019.
-[Oral presentation]</p>
+<p><strong>High-dimensional real-world data: chances, challenges and
+exemplary use cases.</strong> Global Data Science Conference (Roche
+internal). Baden-Baden, 26th June 2019. [Oral presentation]</p>
+<p><strong>Deep Learning-based Propensity Score Computation: Exemplary
+Cohort Study in Second Line Metastatic Cancer Patients Treated with
+Cancer Immunotherapy Versus Non-Cancer Immunotherapy.</strong> 10th
+Workshop of the working group Pharmacoepidemiology of the German Society
+for Epidemiology (DGEpi). Berlin, 24th May 2019. [Oral presentation]</p>
+<p><strong>Comparative performance of a modified landmark approach when
+no time of treatment data are available within oncological databases:
+exemplary cohort study among resected pancreatic cancer
+patients.</strong> 9th Workshop of the working group
+Pharmacoepidemiology of the German Society for Epidemiology (DGEpi).
+Bremen, 8th June 2018. [Oral presentation]</p>
 </div>
-<div id="posters" class="section level2">
-<h2>Posters</h2>
+<div id="posters-and-others" class="section level2">
+<h2>Posters and others</h2>
 <p><strong>Weberpals J</strong>, Fruechtenicht C, Davis R, Huntley M,
 Oki Y, Wyatt S, Castro F, Trinh H. Patient characteristics, outcomes and
 potential for bias in oncological real-world data studies with
@@ -424,6 +438,12 @@ J, Tejpar S, Yoshino T, Stintzing S. Utilisation and predictors of
 genomic testing prior to first-line (1L) therapy in patients (pts) with
 metastatic colorectal cancer (mCRC). ESMO 2021. Ann Oncol 2021; 32(5);
 S530-S582. [Poster]</p>
+<p>Loureiro H, Becker T, Bauer-Mehren A, Ahmidi N, <strong>Weberpals
+J</strong>. Improving predictive ability of survival models: comparison
+of multiple state of the art models. 36th International Conference on
+Pharmacoepidemiology &amp; Therapeutic Risk Management, Berlin, Germany,
+2020. Pharmacoepidemiol Drug Saf 2020; 29(S3):35-35 [Oral presentation
+given by mentee]</p>
 <p><strong>Weberpals J</strong>, Becker T, Schmich, Rüttinger D, Theis
 FJ, Bauer-Mehren A. Deep learning-based propensity score computation:
 Cohort study in second line treated advanced non-small cell lung cancer
@@ -440,12 +460,7 @@ resected pancreatic cancer patients. Pharmacoepidemiol Drug Saf 2018;
 Long-term heart-specific mortality among 347,476 breast cancer patients
 treated with radio- or chemotherapy: A registry-based study.
 Pharmacoepidemiol Drug Saf 2018;27:144-144.</p>
-<p>Comparative performance of a modified landmark approach when no time
-of treatment data are available within oncological databases: exemplary
-cohort study among resected pancreatic cancer patients. 9th Workshop of
-the working group Pharmacoepidemiology of the German Society for
-Epidemiology (DGEpi). Bremen, 8th June 2018. [Oral presentation]
-<strong>Weberpals J</strong>, Jansen L, Haefeli WE, Hoffmeister M,
+<p><strong>Weberpals J</strong>, Jansen L, Haefeli WE, Hoffmeister M,
 Wolkewitz M, Herk-Sukel MPPv, Vissers PAJ, Brenner H. Pre- and
 post-diagnostic β-blocker use and lung cancer survival: A
 population-based cohort study. 33rd International Conference on
