--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Scientific talks and conference contributions</title>
+<title>Publications</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -348,171 +348,143 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Scientific talks and conference
-contributions</h1>
+<h1 class="title toc-ignore">Publications</h1>
 
 </div>
 
 
-<div id="talks-conferences-and-invited" class="section level2">
-<h2>Talks (conferences and invited)</h2>
-<p><strong>Landscape Analysis on Techniques to Deal with Missing Data in
-Longitudinal Healthcare Databases.</strong> <br> The presentation was
-part of the pre-conference educational course <em>Advanced
-Pharmacoepidemiology Methods: Mitigating Missing Data Concerns with
-External or Internal Subset Validation Populations.</em> 38th
-International Conference on Pharmacoepidemiology and Therapeutic Risk
-Management, Copenhagen, Denmark, August 25th 2022. [Educational
-conference talk]</p>
-<p><strong>Deep Learning on Electronic Health Records for Research in
-Pharmacoepidemiology: Examples from The Field of Oncology.</strong> <br>
-Invited speaker at FDA Sentinel Innovation and Methods Seminar series on
-September 7th 2022 (Invited talk).</p>
-<p><strong>A Systematic Approach Towards Missing Lab Data in Electronic
-Health Records: A Case Study in Non-Small Cell Lung Cancer and Multiple
-Myeloma.</strong> <br> 37th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management 2021.
-Pharmacoepidemiol Drug Saf 2021; 30:36-36. [Oral presentation]</p>
-<p><strong>Deep learning-based propensity scores for confounding control
-in comparative effectiveness research: a large-scale real-world data
-study.</strong> <br> 36th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management, Berlin, Germany,
-2020. Pharmacoepidemiol Drug Saf 2020; 29(S3):382-383 [Oral
-presentation]</p>
-<p><strong>Real-world Data Science in Pharmaceutical Research &amp;
-Early Drug Development.</strong> <br> Research &amp; Development Career
-Day and Mentoring Event, German Cancer Research Center (DKFZ),
-Heidelberg, Germany, December 6th 2019. [Invited talk]</p>
-<p><strong>Cancer Pharmacoepidemiology: Researching the Diffusion of
-Innovation.</strong> <br> University of Florida, Gainesville, FL, USA,
-November 14th 2019. [Faculty candidate seminar presentation]</p>
-<p><strong>Deep learning-based propensity score computation - A
-methodological approach to constructing synthetic control arms.</strong>
-<br> RPF/RiSE Symposium 2019. Basel, September 2nd 2019. [Oral
-presentation]</p>
-<p><strong>Deep Learning in Pharmacoepidemiology &amp; Drug
-Development.</strong> <br> Mittwochsfortbildung [Clinical advanced
-training lecture], Department for Clinical Pharmacology and
-Pharmacoepidemiology, University hospital Heidelberg, Heidelberg,
-Germany, August 9th 2019. [Invited talk]</p>
-<p><strong>Deep Learning on Real-World Data: Overview and Application in
-Early Drug Development.</strong> <br> Symposium Clinical Pharmacology
-&amp; Clinical Pharmacy. Reims, France, June 29th 2019. [Oral
-presentation]</p>
-<p><strong>High-dimensional real-world data: chances, challenges and
-exemplary use cases.</strong> <br> Global Data Science Conference (Roche
-internal). Baden-Baden, June 26th 2019. [Oral presentation]</p>
-<p><strong>Deep Learning-based Propensity Score Computation: Exemplary
-Cohort Study in Second Line Metastatic Cancer Patients Treated with
-Cancer Immunotherapy Versus Non-Cancer Immunotherapy.</strong> <br> 10th
-Workshop of the working group Pharmacoepidemiology of the German Society
-for Epidemiology (DGEpi). Berlin, May 24th 2019. [Oral presentation]</p>
-<p><strong>Comparative performance of a modified landmark approach when
-no time of treatment data are available within oncological databases:
-exemplary cohort study among resected pancreatic cancer
-patients.</strong> <br> 9th Workshop of the working group
-Pharmacoepidemiology of the German Society for Epidemiology (DGEpi).
-Bremen, June 8th 2018. [Oral presentation]</p>
-</div>
-<div id="posters-and-others" class="section level2">
-<h2>Posters and others</h2>
-<p><strong>Weberpals J</strong>, Fruechtenicht C, Davis R, Huntley M,
-Oki Y, Wyatt S, Castro F, Trinh H. Patient characteristics, outcomes and
-potential for bias in oncological real-world data studies with
-imaging-derived response endpoints. 38th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management, Copenhagen,
-Denmark 2022. Pharmacoepidemiol Drug Saf 2022. (Poster)</p>
-<p>Sayegh N, Graf RP, Fisher V, <strong>Weberpals J</strong>, Huang RSP,
-Lin DI, Gjoerup O, Raskina K, Severson EA, Haberberger JF, Ross JS,
-Alexander BM, Levy MA, Oxnard GR, Agarwal N. Tumor mutational burden as
-a predictive biomarker for immune checkpoint inhibitor versus taxane
-chemotherapy benefit in metastatic castration-resistant prostate cancer:
-A real-world biomarker study. ASCO GU 2022 [Poster]</p>
-<p>Dienstmann R, Turnbul Cl, Hackshaw Allan, Blay JY, Maud K, Servant N,
-Geissler J, Tamborero D, <strong>Weberpals J</strong>, Fear S, Perret S,
-Perez L, von Meyenn Martina, Le Tourneau C. Conceptualization of core
-clinico-molecular variables for registries enrolling patients diagnosed
-with a solid tumor and profiled with next-generation sequencing (NGS).
-AACR 2022 [Poster]</p>
-<p>Lenz HJ, <strong>Weberpals J</strong>, Cremolini C, Grothey A,
-Leutgeb B, Mahrus S, Nimeiri H, Reyes-Rivera I, Seligmann J, Tabernero
-J, Tejpar S, Yoshino T, Stintzing S. Utilisation and predictors of
-genomic testing prior to first-line (1L) therapy in patients (pts) with
-metastatic colorectal cancer (mCRC). ESMO 2021. Ann Oncol 2021; 32(5);
-S530-S582. [Poster]</p>
-<p>Loureiro H, Becker T, Bauer-Mehren A, Ahmidi N, <strong>Weberpals
-J</strong>. Improving predictive ability of survival models: comparison
-of multiple state of the art models. 36th International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management, Berlin, Germany,
-2020. Pharmacoepidemiol Drug Saf 2020; 29(S3):35-35 [Oral presentation
-given by mentee]</p>
-<p><strong>Weberpals J</strong>, Becker T, Schmich, Rüttinger D, Theis
-FJ, Bauer-Mehren A. Deep learning-based propensity score computation:
-Cohort study in second line treated advanced non-small cell lung cancer
-(aNSCLC) patients. 35rd International Conference on Pharmacoepidemiology
-&amp; Therapeutic Risk Management, Philadelphia, USA, 2019.
-Pharmacoepidemiol Drug Saf 2019; 28:585-586. [Poster]</p>
-<p><strong>Weberpals J</strong>, Jansen L, Silversmit G, Veerbeck J, van
-der Geest L, Vissers PAJ, Zadnik V, Brenner H. Comparative performance
-of a modified landmark approach when no time of treatment data are
+<div id="peer-reviewed-papers" class="section level2">
+<h2>Peer-reviewed papers</h2>
+<p><strong>Weberpals J</strong>, Roumpanis S, Barer Y, Ehrlich S, Jessop
+N, Pedotti R, Vaknin-Dembinsky A, Brill L, Chodick G, Muros-Le Rouzic E.
+Clinical outcomes of COVID-19 in patients with multiple sclerosis
+treated with ocrelizumab in the pre- and post-SARS-CoV-2 vaccination
+periods: insights from Israel. Multiple Sclerosis and Related Disorders,
+2022, S. 104153</p>
+<p>Graf RP, Fisher V, <strong>Weberpals J</strong>, Gjoerup O, Tierno
+MB, Huang RSP, Sayegh N, Lin DI, Raskina K, Schrock AB, Severson E,
+Haberberger JF, Ross JS, Creeden J, Levy MA, Alexander BM, MD, Oxnard
+GR, Agarwal N. Comparative Effectiveness of Immune Checkpoint Inhibitors
+vs. Chemotherapy by Tumor Mutational Burden in Metastatic
+Castration-Resistant Prostate Cancer. JAMA Netw Open. 2022;5(3):e225394.
+<a href="doi:10.1001/jamanetworkopen.2022.5394" class="uri">doi:10.1001/jamanetworkopen.2022.5394</a></p>
+<p>Loureiro H**, Becker T, Bauer-Mehren A, Ahmidi N*, <strong>Weberpals
+J</strong>*. Artificial Intelligence for Prognostic Scores in Oncology:
+a Benchmarking Study. Front Artif Intell. 2021 Apr 16;4:625573. doi:
+10.3389/frai.2021.625573. PMID: 33937744; PMCID: PMC8086599.</p>
+<p><strong>Weberpals J</strong>, Becker T, Davies J, Schmich F,
+Rüttinger D, Theis FJ, Bauer-Mehren A. Deep Learning-based Propensity
+Scores for Confounding Control in Comparative Effectiveness Research: A
+Large-scale, Real-world Data Study. Epidemiology. 2021 May
+1;32(3):378-88. doi: 10.1097/EDE.0000000000001338. PMID: 33591049.</p>
+<p>Jansen L, Holleczek B, Kraywinkel K, <strong>Weberpals J</strong>,
+Schröder CC, Eberle A, Emrich K, Kajüter H, Katalinic A, Kieschke J,
+Nennecke A, Sirri E, Heil J, Schneeweiss A, Brenner H. Divergent
+Patterns and Trends in Breast Cancer Incidence, Mortality and Survival
+Among Older Women in Germany and the United States. Cancers (Basel).
+2020 Aug 26;12(9):2419. doi: 10.3390/cancers12092419. PMID: 32858964;
+PMCID: PMC7565138.</p>
+<p>Brunssen A, Jansen L, Eisemann N, Waldmann A, <strong>Weberpals
+J</strong>, Kraywinkel K, Eberle A, Holleczek B, Zeissig SR, Brenner H,
+Katalinic A; GEKID Cancer Survival Working Group. Long-term relative
+survival from melanoma in Germany 1997-2013. Melanoma Res. 2020
+Aug;30(4):386-95. doi: 10.1097/CMR.0000000000000482. PMID: 30020195.</p>
+<p>Becker T, <strong>Weberpals J</strong>, Jegg AM, So WV, Fischer A,
+Weisser M, Schmich F, Rüttinger D, Bauer-Mehren A. An enhanced
+prognostic score for overall survival of patients with cancer derived
+from a large real-world cohort. Ann Oncol. 2020 Nov;31(11):1561-8. doi:
+10.1016/j.annonc.2020.07.013. Epub 2020 Jul 31. PMID: 32739409.</p>
+<p>Walter V, Boakye D, <strong>Weberpals J</strong>, Jansen L, Haefeli
+WE, Martens UM, Knebel P, Chang-Claude J, Hoffmeister M, Brenner H.
+Decreasing Use of Chemotherapy in Older Patients With Stage III Colon
+Cancer Irrespective of Comorbidities. J Natl Compr Canc Netw. 2019 Sep
+1;17(9):1089-99. doi: 10.6004/jnccn.2019.7287. PMID: 31487678.</p>
+<p>Perna L, Wahl HW, <strong>Weberpals J</strong>, Jansen L, Mons U,
+Schöttker B, Brenner H. Incident depression and mortality among people
+with different types of dementia: results from a longitudinal cohort
+study. Soc Psychiatry Psychiatr Epidemiol. 2019 Jul;54(7):793-801. doi:
+10.1007/s00127-019-01683-0. Epub 2019 Mar 6. PMID: 30840093.</p>
+<p>Muñoz MA, Jeon N, Staley B, Henriksen C, Xu D, <strong>Weberpals
+J</strong>, Winterstein AG. Predicting medication-associated altered
+mental status in hospitalized patients: Development and validation of a
+risk model. Am J Health Syst Pharm. 2019 Jun 18;76(13):953-63. doi:
+10.1093/ajhp/zxz119. PMID: 31361885.</p>
+<p>Pulte D, <strong>Weberpals J</strong>, Jansen L, Brenner H. Changes
+in population-level survival for advanced solid malignancies with new
+treatment options in the second decade of the 21st century. Cancer. 2019
+Aug 1;125(15):2656-65. doi: 10.1002/cncr.32160. Epub 2019 May 16. PMID:
+31095726.</p>
+<p>Brunssen A, Jansen L, Eisemann N, Waldmann A, <strong>Weberpals
+J</strong>, Kraywinkel K, Eberle A, Holleczek B, Zeissig SR, Brenner H,
+Katalinic A; GEKID Cancer Survival Working Group. A population-based
+registry study on relative survival from melanoma in Germany stratified
+by tumor thickness for each histologic subtype. J Am Acad Dermatol. 2019
+Apr;80(4):938-46. doi: 10.1016/j.jaad.2018.09.018. Epub 2018 Sep 20.
+PMID: 30244061.</p>
+<p><strong>Weberpals J</strong>, Jansen L, Silversmit G, Verbeeck J, van
+der Geest L, Vissers PA, Zadnik V, Brenner H. Comparative performance of
+a modified landmark approach when no time of treatment data are
 available within oncological databases: exemplary cohort study among
-resected pancreatic cancer patients. Pharmacoepidemiol Drug Saf 2018;
-27:223-223.</p>
+resected pancreatic cancer patients. Clin Epidemiol. 2018 Aug
+30;10:1109-25. doi: 10.2147/CLEP.S160973. PMID: 30214315; PMCID:
+PMC6121745.</p>
 <p><strong>Weberpals J</strong>, Jansen L, Müller OJ, Brenner H.
-Long-term heart-specific mortality among 347,476 breast cancer patients
-treated with radio- or chemotherapy: A registry-based study.
-Pharmacoepidemiol Drug Saf 2018;27:144-144.</p>
-<p><strong>Weberpals J</strong>, Jansen L, Haefeli WE, Hoffmeister M,
-Wolkewitz M, Herk-Sukel MPPv, Vissers PAJ, Brenner H. Pre- and
-post-diagnostic β-blocker use and lung cancer survival: A
-population-based cohort study. 33rd International Conference on
-Pharmacoepidemiology &amp; Therapeutic Risk Management, Montréal,
-Canada, 2017. Pharmacoepidemiol Drug Saf 2017;26: 269-269 [Spotlight
-Poster]</p>
+Long-term heart-specific mortality among 347 476 breast cancer patients
+treated with radiotherapy or chemotherapy: a registry-based cohort
+study. Eur Heart J. 2018 Nov 14;39(43):3896-903. doi:
+10.1093/eurheartj/ehy167. PMID: 29635274.</p>
+<p>Pulte D, <strong>Weberpals J</strong>, Schröder CC, Emrich K,
+Holleczek B, Katalinic A, Luttmann S, Sirri E, Jansen L, Brenner H;
+GEKID Cancer Survival Working Group. Survival of patients with
+hepatobiliary tract and duodenal cancer sites in Germany and the United
+States in the early 21st century. Int J Cancer. 2018 Jul
+15;143(2):324-32. doi: 10.1002/ijc.31322. Epub 2018 Mar 5. PMID:
+29479701.</p>
+<p>Carr PR<em>, Alwers E</em>, Bienert S, <strong>Weberpals J</strong>,
+Kloor M, Brenner H, Hoffmeister M. Lifestyle factors and risk of
+sporadic colorectal cancer by microsatellite instability status: a
+systematic review and meta-analyses. Ann Oncol. 2018 Apr 1;29(4):825-34.
+doi: 10.1093/annonc/mdy059. PMID: 29438474.</p>
 <p><strong>Weberpals J</strong>, Jansen L, van Herk-Sukel MPP, Kuiper
 JG, Aarts MJ, Vissers PAJ, Brenner H. Immortal time bias in
 pharmacoepidemiological studies on cancer patient survival: empirical
 illustration for beta-blocker use in four cancers with different
-prognosis. 33rd International Conference on Pharmacoepidemiology &amp;
-Therapeutic Risk Management, Montréal, Canada, 2017. Pharmacoepidemiol
-Drug Saf 2017;26:91-91 [Poster]</p>
+prognosis. Eur J Epidemiol. 2017 Nov;32(11):1019-31. doi:
+10.1007/s10654-017-0304-5. Epub 2017 Sep 1. PMID: 28864947.</p>
+<p>Pulte D*, <strong>Weberpals J</strong>*, Jansen L, Luttmann S,
+Holleczek B, Nennecke A, Ressing M, Katalinic A, Brenner H; GEKID Cancer
+Survival Working Group. Survival for patients with rare haematologic
+malignancies: Changes in the early 21st century. Eur J Cancer. 2017
+Oct;84:81-7. doi: 10.1016/j.ejca.2017.07.014. Epub 2017 Aug 8. PMID:
+28800491.</p>
+<p><strong>Weberpals J</strong>, Jansen L, Haefeli WE, Hoffmeister M,
+Wolkewitz M, Herk-Sukel MPPV, Vissers PAJ, Brenner H. Pre- and
+post-diagnostic β-blocker use and lung cancer survival: A
+population-based cohort study. Sci Rep. 2017 Jun 6;7(1):2911. doi:
+10.1038/s41598-017-02913-8. PMID: 28588274; PMCID: PMC5460218.</p>
+<p><strong>Weberpals J</strong>*, Pulte D*, Jansen L, Luttmann S,
+Holleczek B, Nennecke A, Ressing M, Katalinic A, Merz M, Brenner H;
+GEKID Cancer Survival Working Group. Survival of patients with
+lymphoplasmacytic lymphoma and solitary plasmacytoma in Germany and the
+United States of America in the early 21st century. Haematologica. 2017
+Jun;102(6):e229-32. doi: 10.3324/haematol.2016.157768. Epub 2017 Mar 9.
+PMID: 28280077; PMCID: PMC5451350.</p>
+<p>Jansen L<em>, Weberpals J</em>, Kuiper JG, Vissers PAJ, Wolkewitz M,
+Hoffmeister M, Brenner H. Pre- and post-diagnostic beta-blocker use and
+prognosis after colorectal cancer: Results from a population-based
+study. Int J Cancer. 2017 Jul 1;141(1):62-71. doi: 10.1002/ijc.30717.
+PMID: 28370155.</p>
 <p>Muhlack DC, Hoppe LK, <strong>Weberpals J</strong>, Brenner H,
-Schottker B. The Association of Potentially Inappropriate Medication at
+Schöttker B. The Association of Potentially Inappropriate Medication at
 Older Age With Cardiovascular Events and Overall Mortality: A Systematic
-Review and Meta-Analysis of Cohort Studies. Pharmacoepidemiol Drug Saf
-2017;26: 173-173 [Poster]</p>
-<p>Pulte D, Jansen L, <strong>Weberpals J</strong>, Brenner H.
-Population Level Survival for Patients with Multiple Myeloma By
-Insurance Type and Early Indications of Changes with Adoption of the
-Medicaid Expansion of the Affordable Care Act. Blood 2017;130(Suppl 1):
-3438-3438</p>
-<p>Pulte D, Jansen L, <strong>Weberpals J</strong>, Brenner H. Updated
-Population Based Survival Analysis in Patients with Chronic Myeloid
-Leukemia: Increased Survival but Continued Disparities for Older
-Patients. Blood 2017;130(Suppl 1): 2192-2192</p>
-<p>Brunßen A, Jansen L, Eisemann N, <strong>Weberpals J</strong>,
-Katalinic A. Recent trends in relative survival from melanoma in Germany
-stratified by age group, T-stage, and histological subtype. Das
-Gesundheitswesen 2017;79: V-181.</p>
-<p>Pulte D, <strong>Weberpals J</strong>, Jansen L, Katalinic A,
-Nennecke A, Bernd H, Meike R, Sabine L, Brenner H. Survival of Patients
-with Rare Plasma Cell or Lymphoplasmacytoid Malignancies in Germany and
-the United States in the Early 21st Century. Blood 2016;128:
-4767-4767.</p>
-<p>Pulte D, <strong>Weberpals J</strong>, Jansen L, Katalinic A,
-Nennecke A, Holleczek B, Ressing M, Luttmann S, Brenner H. Population
-Level Survival for Patients with Rare Hematologic Malignancies in the
-United States in the Early 21st Century. Blood 2016;128: 2416-2416.</p>
-<p><strong>Weberpals J</strong>. Beta blockers and cancer prognosis -
-The role of immortal time bias: A systematic review and meta-analysis.
-32nd International Conference on Pharmacoepidemiology &amp; Therapeutic
-Risk Management, Dublin, Ireland 2016. Pharmacoepidemiol Drug Saf 2016;
-25:561-2. [Poster]</p>
-<p><strong>Weberpals J</strong>. Identification of risk factors for
-drug-induced altered mental status, delirium and psychosis for the
-development of a predictive risk model. 28th Annual Research Showcase
-And Awards Recognition Day, University of Florida, College of Pharmacy,
-Gainesville, FL, United States, 2015. [Poster]</p>
+Review and Meta-Analysis of Cohort Studies. J Am Med Dir Assoc. 2017 Mar
+1;18(3):211-20. doi: 10.1016/j.jamda.2016.11.025. Epub 2017 Jan 26.
+PMID: 28131719.</p>
+<p><strong>Weberpals J</strong>, Jansen L, Carr PR, Hoffmeister M,
+Brenner H. Beta blockers and cancer prognosis - The role of immortal
+time bias: A systematic review and meta-analysis. Cancer Treat Rev. 2016
+Jun;47:1-11. doi: 10.1016/j.ctrv.2016.04.004. Epub 2016 Apr 26. PMID:
+27179912.</p>
 </div>
 
 
