looking for error

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -355,6 +355,8 @@ display: none;
 
 <div id="peer-reviewed-papers" class="section level2">
 <h2>Peer-reviewed papers</h2>
+<p>* indicates co-first or co-senior authorship. <br></p>
+<p>** indicates that mentee is first or co-first author</p>
 <p><strong>Weberpals J</strong>, Roumpanis S, Barer Y, Ehrlich S, Jessop
 N, Pedotti R, Vaknin-Dembinsky A, Brill L, Chodick G, Muros-Le Rouzic E.
 Clinical outcomes of COVID-19 in patients with multiple sclerosis
@@ -485,6 +487,47 @@ Brenner H. Beta blockers and cancer prognosis - The role of immortal
 time bias: A systematic review and meta-analysis. Cancer Treat Rev. 2016
 Jun;47:1-11. doi: 10.1016/j.ctrv.2016.04.004. Epub 2016 Apr 26. PMID:
 27179912.</p>
+</div>
+<div id="non-peer-reviewed-scientific-or-medical-publications-in-print-or-other-media" class="section level2">
+<h2>Non-Peer Reviewed Scientific or Medical Publications in Print or
+Other Media</h2>
+<div id="reviews-chapters-monographs-and-editorials" class="section level3">
+<h3>Reviews, chapters, monographs and editorials</h3>
+<p>Brenner H, <strong>Weberpals J</strong>, Jansen L. Epidemiologische
+Forschung mit Krebsregisterdaten, Überlebenszeitanalysen, Vergleich
+nationaler und internationaler Ergebnisse. [Epidemiological
+research-cancer registry data. Survival time analysis-comparison of
+national and international results.] ONKOLOGE. 2017 Apr 1;23(4):272-9.
+(Article in German)</p>
+<p><strong>Weberpals J</strong>, Brenner H. Epidemiologie und
+Risikofaktoren kardiovaskulärer und onkologischer Erkrankungen
+[Epidemiology and risk factors of cardiovascular and oncological
+diseases]. In: Müller OJ, Lehmann L, Bokemeyer C. Kardio-Onkologie.
+Berlin. DeGruyter, 2022 (Book chapter in German)</p>
+</div>
+<div id="books-monographs-articles-and-presentations-in-other-media" class="section level3">
+<h3>Books, monographs, articles and presentations in other media</h3>
+<p><strong>Weberpals J</strong>. Krebsprognose und Betablocker - Eine
+Frage des Studiendesigns [Cancer prognosis and beta-blockers - study
+design matters.] Pharm Ztg 2016;24. (Article in German) Available From:
+<a href="https://www.pharmazeutische-zeitung.de/ausgabe-242016/eine-frage-des-studiendesigns/" class="uri">https://www.pharmazeutische-zeitung.de/ausgabe-242016/eine-frage-des-studiendesigns/</a></p>
+</div>
+<div id="letters-to-the-editor" class="section level3">
+<h3>Letters to the Editor</h3>
+<p><strong>Weberpals J</strong>, Carr PR, Hoffmeister M, Jansen L.
+Comment on: ‘β Blocker use and mortality in cancer patients: systematic
+review and meta-analysis of observational studies’ (Zhong et al., 2015;
+published Epub ahead of print 3 September 2015). Eur J Cancer Prev. 2018
+Jan;27(1):103-4. doi: 10.1097/CEJ.0000000000000243. PMID: 29369941.</p>
+</div>
+<div id="thesis" class="section level3">
+<h3>Thesis</h3>
+<p><strong>Weberpals J</strong>. Associations between β-blocker exposure
+and cancer prognosis: the role of immortal time bias and analytical
+approaches in pharmacoepidemiological studies on cancer patient
+survival. [Doctor Scientiarum Humanarum Dissertation], Medical Faculty
+of Heidelberg, Rupert Carola University Heidelberg, Germany; 2018</p>
+</div>
 </div>
 
 
