--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -363,7 +363,8 @@ Pharmacoepidemiology Methods: Mitigating Missing Data Concerns with
 External or Internal Subset Validation Populations.</em> 38th
 International Conference on Pharmacoepidemiology and Therapeutic Risk
 Management, Copenhagen, Denmark, August 25th 2022. [Educational
-conference talk]</p>
+conference talk] <br> <a href="https://youtu.be/VgGZaGBK0Yo?t=313">Link
+to recording</a></p>
 <p><strong>Deep Learning on Electronic Health Records for Research in
 Pharmacoepidemiology: Examples from The Field of Oncology.</strong> <br>
 Invited speaker at FDA Sentinel Innovation and Methods Seminar series on
