--- a/_pages/awards.html
+++ b/_pages/awards.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Awards &amp; Honors</title>
+<title>Awards and Honors</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -348,7 +348,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Awards &amp; Honors</h1>
+<h1 class="title toc-ignore">Awards and Honors</h1>
 
 </div>
 
@@ -356,13 +356,13 @@ display: none;
 <ul>
 <li><p><strong><em>Summa cum laude</em>, Ph.D. thesis in
 Epidemiology</strong> <br> Medical Faculty, Ruperto Carola University
-Heidelberg, Germany</p></li>
-<li><p><strong>Stephan-Weiland Award (1st prize)</strong> German Society
-for Epidemiology (DGEpi) e.V. Early career award for the publication
-“Immortal time bias in pharmacoepidemiological studies on cancer patient
-survival: empirical illustration for beta-blocker use in four cancers
-with different prognosis, European Journal of Epidemiology (2017), 32
-(11), 1019-1031.”</p></li>
+Heidelberg, Germany, 2019</p></li>
+<li><p><strong>Stephan-Weiland Award (1st prize) - German Society for
+Epidemiology (DGEpi) e.V.</strong> <br> Early career award 2018 for the
+publication “Immortal time bias in pharmacoepidemiological studies on
+cancer patient survival: empirical illustration for beta-blocker use in
+four cancers with different prognosis, European Journal of Epidemiology
+(2017), 32 (11), 1019-1031.”</p></li>
 <li><p><strong>Advancement Award - German Association for Medical
 Informatics, Biometry and Epidemiology (GMDS) e.V.</strong> <br> Best
 national Ph.D. thesis in the category “Epidemiology” in 2018</p></li>
