updated some small reference things

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -370,7 +370,7 @@ GR, Agarwal N. Comparative Effectiveness of Immune Checkpoint Inhibitors
 vs. Chemotherapy by Tumor Mutational Burden in Metastatic
 Castration-Resistant Prostate Cancer. JAMA Netw Open. 2022;5(3):e225394.
 <a href="doi:10.1001/jamanetworkopen.2022.5394" class="uri">doi:10.1001/jamanetworkopen.2022.5394</a></p>
-<p>Loureiro H**, Becker T, Bauer-Mehren A, Ahmidi N*, <strong>Weberpals
+<p>Loureiro H***, Becker T, Bauer-Mehren A, Ahmidi N*, <strong>Weberpals
 J</strong>*. Artificial Intelligence for Prognostic Scores in Oncology:
 a Benchmarking Study. Front Artif Intell. 2021 Apr 16;4:625573. doi:
 10.3389/frai.2021.625573. PMID: 33937744; PMCID: PMC8086599.</p>
@@ -442,11 +442,11 @@ hepatobiliary tract and duodenal cancer sites in Germany and the United
 States in the early 21st century. Int J Cancer. 2018 Jul
 15;143(2):324-32. doi: 10.1002/ijc.31322. Epub 2018 Mar 5. PMID:
 29479701.</p>
-<p>Carr PR<em>, Alwers E</em>, Bienert S, <strong>Weberpals J</strong>,
-Kloor M, Brenner H, Hoffmeister M. Lifestyle factors and risk of
-sporadic colorectal cancer by microsatellite instability status: a
-systematic review and meta-analyses. Ann Oncol. 2018 Apr 1;29(4):825-34.
-doi: 10.1093/annonc/mdy059. PMID: 29438474.</p>
+<p>Carr PR*, Alwers E*, Bienert S, <strong>Weberpals J</strong>, Kloor
+M, Brenner H, Hoffmeister M. Lifestyle factors and risk of sporadic
+colorectal cancer by microsatellite instability status: a systematic
+review and meta-analyses. Ann Oncol. 2018 Apr 1;29(4):825-34. doi:
+10.1093/annonc/mdy059. PMID: 29438474.</p>
 <p><strong>Weberpals J</strong>, Jansen L, van Herk-Sukel MPP, Kuiper
 JG, Aarts MJ, Vissers PAJ, Brenner H. Immortal time bias in
 pharmacoepidemiological studies on cancer patient survival: empirical
