added some talk links

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -368,7 +368,8 @@ to recording</a></p>
 <p><strong>Deep Learning on Electronic Health Records for Research in
 Pharmacoepidemiology: Examples from The Field of Oncology.</strong> <br>
 Invited speaker at FDA Sentinel Innovation and Methods Seminar series on
-September 7th 2022 (Invited talk).</p>
+September 7th 2022 [Invited talk].<br> <a href="https://www.youtube.com/embed/yglV1EGF3Fs">Link to
+recording</a></p>
 <p><strong>A Systematic Approach Towards Missing Lab Data in Electronic
 Health Records: A Case Study in Non-Small Cell Lung Cancer and Multiple
 Myeloma.</strong> <br> 37th International Conference on
