--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -370,7 +370,7 @@ GR, Agarwal N. Comparative Effectiveness of Immune Checkpoint Inhibitors
 vs. Chemotherapy by Tumor Mutational Burden in Metastatic
 Castration-Resistant Prostate Cancer. JAMA Netw Open. 2022;5(3):e225394.
 <a href="doi:10.1001/jamanetworkopen.2022.5394" class="uri">doi:10.1001/jamanetworkopen.2022.5394</a></p>
-<p>Loureiro H***, Becker T, Bauer-Mehren A, Ahmidi N*, <strong>Weberpals
+<p>Loureiro H**, Becker T, Bauer-Mehren A, Ahmidi N*, <strong>Weberpals
 J</strong>*. Artificial Intelligence for Prognostic Scores in Oncology:
 a Benchmarking Study. Front Artif Intell. 2021 Apr 16;4:625573. doi:
 10.3389/frai.2021.625573. PMID: 33937744; PMCID: PMC8086599.</p>
