added new accepted publication in CPT

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -353,16 +353,27 @@ display: none;
 </div>
 
 
-<div id="peer-reviewed-papers" class="section level2">
-<h2>Peer-reviewed papers</h2>
-<p>* indicates co-first or co-senior authorship. <br></p>
-<p>** indicates that mentee is first or co-first author</p>
+<div id="peer-reviewed-papers-sorted-by-date-in-descending-order" class="section level2">
+<h2>Peer-reviewed papers (sorted by date in descending order)</h2>
+<p>* indicates co-first or co-senior authorship. <br> ** indicates that
+mentee is first or co-first author</p>
+<p>Sondhi A*, <strong>Weberpals J</strong>*, Yerram P, Jiang C, Taylor
+MD, Samant M, Cherng S. A Systematic Approach Towards Missing Lab Data
+in Electronic Health Records: A Case Study in Non-Small Cell Lung Cancer
+and Multiple Myeloma. CPT Pharmacometrics Syst Pharmacol. 2023
+(accepted)</p>
+<p>Jin Y, <strong>Weberpals J</strong>, Wang SV, Desai RJ, Merola D, Lin
+KJ. The Impact of Longitudinal Data-Completeness of Electronic Health
+Record Data on the Prediction Performance of Clinical Risk Scores. Clin
+Pharmacol Ther. 2023 Apr 7. doi: 10.1002/cpt.2901. Epub ahead of print.
+PMID: 37026443.</p>
 <p><strong>Weberpals J</strong>, Roumpanis S, Barer Y, Ehrlich S, Jessop
-N, Pedotti R, Vaknin-Dembinsky A, Brill L, Chodick G, Muros-Le Rouzic E.
+N, Pedotti R, Vaknin-Dembinsky A, Brill L, Chodick G, Rouzic EM.
 Clinical outcomes of COVID-19 in patients with multiple sclerosis
 treated with ocrelizumab in the pre- and post-SARS-CoV-2 vaccination
-periods: insights from Israel. Multiple Sclerosis and Related Disorders,
-2022, S. 104153</p>
+periods: Insights from Israel. Mult Scler Relat Disord. 2022
+Dec;68:104153. doi: 10.1016/j.msard.2022.104153. Epub 2022 Aug 29. PMID:
+36081277; PMCID: PMC9422340.</p>
 <p>Graf RP, Fisher V, <strong>Weberpals J</strong>, Gjoerup O, Tierno
 MB, Huang RSP, Sayegh N, Lin DI, Raskina K, Schrock AB, Severson E,
 Haberberger JF, Ross JS, Creeden J, Levy MA, Alexander BM, MD, Oxnard
